--- a/src/ForBrowser/wwwroot/index.html
+++ b/src/ForBrowser/wwwroot/index.html
@@ -1,13 +1,20 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>ForBrowser</title>
+    <title>BagOBlazor - ForBrowser</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+
+    <script src="_framework/blazor.webassembly.js" defer></script>
+
+    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
+
     <link href="css/site.css" rel="stylesheet" />
+
 </head>
 
 <body>
@@ -18,7 +25,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
+    
 </body>
 
 </html>
