--- a/src/ForDesk/wwwroot/index.html
+++ b/src/ForDesk/wwwroot/index.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>ForBrowser</title>
+    <title>ForDesk</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
+    <script src="framework://blazor.desktop.js" defer></script>
+
+    <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
 </head>
 
 <body>
@@ -18,7 +21,6 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
