--- a/src/ForBrowser/wwwroot/index.html
+++ b/src/ForBrowser/wwwroot/index.html
@@ -12,8 +12,9 @@
     <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
     <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
+    <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
 
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/forBrowser.min.css" rel="stylesheet" />
 
 </head>
 
@@ -22,7 +23,7 @@
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        <a href="">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
     
