--- a/src/ForDesk/wwwroot/index.html
+++ b/src/ForDesk/wwwroot/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width" />
     <title>ForDesk</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+
     <script src="framework://blazor.desktop.js" defer></script>
 
+    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
+
     <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
+    
+    <link href="css/forDesk.min.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -18,7 +23,7 @@
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        <a href="">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
 </body>
