Sharing demos with for browser.

--- a/src/ForBrowser/wwwroot/index.html
+++ b/src/ForBrowser/wwwroot/index.html
@@ -8,13 +8,13 @@
     <base href="/" />
 
     <script src="_framework/blazor.webassembly.js" defer></script>
-
+    
     <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
     <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
     <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
 
-    <link href="css/forBrowser.min.css" rel="stylesheet" />
+    <link href="css/forBrowser.css" rel="stylesheet" />
 
 </head>
 
