--- a/src/ForBrowser/Web/index.html
+++ b/src/ForBrowser/Web/index.html
@@ -3,21 +3,20 @@
 
 <head>
     <!--updated to reflect base path on deploy-->
-    <base href="/"/>
+    <base href="/" />
 
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width"/>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <title>BagOBlazor - ForBrowser</title>
 
     <script src="_framework/blazor.webassembly.js" defer></script>
 
-    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet"/>
-    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet"/>
-    <script src="_content/kwd.BoxOBlazor/util.js" defer></script>
-    <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet"/>
-
-    <link href="css/forBrowser.css" rel="stylesheet"/>
-
+    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <script src="_content/kwd.BoxOBlazor/util.js"></script>
+    <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
+    
+    <link href="css/forBrowser.css" rel="stylesheet" />
 </head>
 
 <body>
