--- a/src/ForBrowser/Web/index.html
+++ b/src/ForBrowser/Web/index.html
@@ -7,7 +7,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>BagOBlazor - ForBrowser</title>
+    <title>BoxOBlazor - ForBrowser</title>
 
     <script src="_framework/blazor.webassembly.js" defer></script>
 
