--- a/src/ForBrowser/Web/index.html
+++ b/src/ForBrowser/Web/index.html
@@ -11,10 +11,10 @@
 
     <script src="_framework/blazor.webassembly.js" defer></script>
 
-    <link href="_content/kwd.BoxOBlazor/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="_content/kwd.BoxOBlazor/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
-    <script src="_content/kwd.BoxOBlazor/util.js"></script>
-    <link href="_content/kwd.BoxOBlazor/css/site.css" rel="stylesheet" />
+    <link href="_content/kwd.BoxOBlazor.Demo/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/kwd.BoxOBlazor.Demo/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <script src="_content/kwd.BoxOBlazor.Demo/util.js"></script>
+    <link href="_content/kwd.BoxOBlazor.Demo/css/site.css" rel="stylesheet" />
     
     <link href="css/forBrowser.css" rel="stylesheet" />
 </head>
