--- a/src/ForBrowser/Web/index.html
+++ b/src/ForBrowser/Web/index.html
@@ -11,11 +11,14 @@
 
     <script src="_framework/blazor.webassembly.js" defer></script>
 
+    <link href="manifest.json" rel="manifest" />
+    <script defer>navigator.serviceWorker.register('service-worker.js');</script>
+    
     <link href="_content/kwd.BoxOBlazor.Demo/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="_content/kwd.BoxOBlazor.Demo/css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
     <script src="_content/kwd.BoxOBlazor.Demo/util.js"></script>
     <link href="_content/kwd.BoxOBlazor.Demo/css/site.css" rel="stylesheet" />
-    
+
     <link href="css/forBrowser.css" rel="stylesheet" />
 </head>
 
